<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:visibility="visible">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackgroundColor"
        android:weightSum="4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/keypad_row_vertical_margin"
            android:layout_weight="1"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_1"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_2"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_3"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/keypad_row_vertical_margin"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_4"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_5"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_6"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/keypad_row_vertical_margin"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_7"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_8"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_9"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/keypad_row_vertical_margin"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/keypad_button_backspace"
                style="@style/Keypad.BackspaceButton"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                tools:ignore="ImageContrastCheck" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keypad_button_0"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="@dimen/keypad_button_height"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/component_keypad_key_0" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/keypad_button_empty"
                style="@style/Widget.Button.Payplaza.Keypad"
                android:layout_width="@dimen/keypad_button_width"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/keypad_button_horizontal_margin"
                android:layout_weight="1" />

        </TableRow>
    </TableLayout>
</androidx.appcompat.widget.LinearLayoutCompat>