<?xml version="1.0" encoding="utf-8"?>
<resources
    translatable="false">
    <string name="app_name" translatable="false">ECR_SDK_Integration</string>
    <string name="app_name_icon" translatable="false">ECR</string>

    <string name="component_keypad_key_0" translatable="false">0</string>
    <string name="component_keypad_key_1" translatable="false">1</string>
    <string name="component_keypad_key_2" translatable="false">2</string>
    <string name="component_keypad_key_3" translatable="false">3</string>
    <string name="component_keypad_key_4" translatable="false">4</string>
    <string name="component_keypad_key_5" translatable="false">5</string>
    <string name="component_keypad_key_6" translatable="false">6</string>
    <string name="component_keypad_key_7" translatable="false">7</string>
    <string name="component_keypad_key_8" translatable="false">8</string>
    <string name="component_keypad_key_9" translatable="false">9</string>

    <string name="component_amount_view_initial_amount" translatable="false">0.00</string>
</resources>