<?xml version="1.0" encoding="utf-8"?><!-- This must come after the content, or the item selection listener will not work -->
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:backgroundTint="@android:color/white"
    app:dividerInsetEnd="0dp"
    app:dividerInsetStart="0dp"
    app:drawerLayoutCornerSize="0dp"
    app:headerLayout="@layout/nav_header_view"
    app:layout_constraintStart_toStartOf="parent">

    <ExpandableListView
        android:id="@+id/ecr_preauth_expandible_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="50dp"
        android:divider="@color/lightShadeColor"
        android:footerDividersEnabled="true"
        android:groupIndicator="@color/fragment_bg"
        android:headerDividersEnabled="true" />
</com.google.android.material.navigation.NavigationView>
