...
        android:orientation="vertical"
        android:gravity="bottom|center"
        android:id="@+id/keypad_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">
        <com.cm.payplaza.ecr_sdk_integration.uicomponents.numericKeypadComponent.NumericKeypadComponent
            android:id="@+id/component_numeric_keypad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
