...
            android:layout_marginBottom="6dp"
            android:text="@string/enter_date"
            android:textAlignment="center"
            style="@style/TextAppearance.Header" />

        <com.cm.payplaza.ecr_sdk_integration.uicomponents.amountViewComponent.AmountViewComponent
            android:id="@+id/date_component_view"
            android:layout_width="250dp"
            android:layout_height="68dp"
            android:elevation="@dimen/elevation"
            android:minWidth="200dp"
            android:padding="@dimen/border_thickness" />

...
